# sipxtapi

./: AvailableBranches.md  Compilation.md  Introduction.md  ProjectHome.md  intel_ipp_6_0_support.md  pre_conf.sh  readme.txt  sipX-msvc8.sln  sipX-msvc9.sln  sipXtapi_3_2_0.md  sipXtapi_3_3_0.md  wcevars.bat
branches/calllib-rewrite/sipXcallLib/src/: Makefile.am
branches/calllib-rewrite/sipXmediaLib/include/: Makefile.am
branches/gips-support/sipXportLib/: Makefile.am  configure.ac  sipXportLibTest-msvc8.vcproj
branches/gips-support/sipXportLib/ssl/: ssl.key
sipXcallLib/include/: Makefile.am
sipXcallLib/include/cp/: AcCommandMsg.h  CSeqManager.h  CallManager.h  CmCommandMsg.h  CmYieldFocusMsg.h  Connection.h  Cp100RelTracker.h  CpAudioCodecInfo.h  CpCall.h  CpCallLibEvents.h  CpCallManager.h  CpCallStateEventListener.h  CpCodecInfo.h  CpConferenceEventListener.h  CpDefs.h  CpGhostConnection.h  CpMediaEventListener.h  CpMediaInterfaceProvider.h  CpMultiStringMessage.h  CpNatTraversalConfig.h  CpNotificationMsgDef.h  CpNotificationRegister.h  CpPeerCall.h  CpSdpNegotiation.h  CpSessionTimerProperties.h  CpSipTransactionManager.h  SipConnection.h  XCpAbstractCall.h  XCpAbstractConnection.h  XCpCall.h  XCpCallControl.h  XCpCallManager.h  XCpCallStack.h  XCpConference.h  XCpSipConnection.h  XSipConnection.h  XSipConnectionContext.h  XSipConnectionEventSink.h
sipXcallLib/include/cp/msg/: AcAcceptConnectionMsg.h  AcAnswerConnectionMsg.h  AcAudioFilePlayMsg.h  AcAudioPausePlaybackMsg.h  AcAudioResumePlaybackMsg.h  AcAudioSendDTMFToneMsg.h  AcAudioStopPlaybackMsg.h  AcAudioToneStartMsg.h  AcCommandMsg.h  AcConnectMsg.h  AcDropAllConnectionsMsg.h  AcDropConnectionMsg.h  AcGainFocusMsg.h  AcHoldAllConnectionsMsg.h  AcLimitCodecPreferencesMsg.h  AcMuteInputConnectionMsg.h  AcNotificationMsg.h  AcRedirectConnectionMsg.h  AcRejectConnectionMsg.h  AcRenegotiateCodecsMsg.h  AcSendInfoMsg.h  AcStartRtpRedirectMsg.h  AcSubscribeMsg.h  AcTransferBlindMsg.h  AcTunneledNotificationMsg.h  AcUnholdAllConnectionsMsg.h  AcUnholdConnectionMsg.h  AcYieldFocusMsg.h  CmNotificationMsg.h  CmYieldFocusMsg.h  CpTimerMsg.h  Sc100RelTimerMsg.h  ScCommandMsg.h  ScConnStateNotificationMsg.h  ScInviteExpirationTimerMsg.h  ScNotificationMsg.h  ScReestablishRtpRedirectCommandMsg.h  ScStartRtpRedirectAckNotificationMsg.h  ScStopRtpRedirectCommandMsg.h  ScTimerMsg.h
sipXcallLib/include/cp/state/: BaseSipConnectionState.h  (+20 more)
sipXcallLib/include/ps/: PsLampInfo.h  PsMsg.h
sipXcallLib/include/ptapi/: PtSingleCallMetaEvent.h
sipXcallLib/include/tapi/: InfoEventMsg.h  KeepaliveEventMsg.h  SecurityHelper.h  SipXAudio.h  SipXCall.h  SipXCallEventListener.h  SipXConference.h  SipXConferenceEventListener.h  SipXConfig.h  SipXCore.h  SipXEventDispatcher.h  SipXEvents.h  SipXInfo.h  SipXInfoEventListener.h  SipXInfoStatusEventListener.h  SipXKeepaliveEventListener.h  SipXLine.h  SipXLineEventListener.h  SipXMediaEventListener.h  SipXMessageObserver.h  SipXPim.h  SipXRtpRedirectEventListener.h  SipXSecurityEventListener.h  SipXSubscribe.h  SipXTransport.h  SipXUtil.h  Template.h  sipXtapi.h  sipXtapiEvents.h
sipXmediaLib/src/: Makefile.am
sipXmediaLib/src/mp/: MicThreadWnt.cpp  MpAsyncPortAudioStream.cpp  MpAudioDeviceInfo.cpp  MpAudioDriverBase.cpp  MpAudioDriverFactory.cpp  MpAudioDriverManager.cpp  MpAudioResource.cpp  MpAudioUtils.cpp  MpBridgeAlgLinear.cpp  MpBuf.cpp  MpBufPool.cpp  MpCallFlowGraph.cpp  MpCodecFactory.cpp  MpCodecInfo.cpp  MpDecodeBuffer.cpp  MpDecoderBase.cpp  MpFlowGraphBase.cpp  MpFlowGraphMsg.cpp  MpJitterBufferBase.cpp  MpJitterBufferDefault.cpp  MpJitterBufferSpeex.cpp  MpMMTimerWnt.cpp  MpMediaTask.cpp  MpMisc.cpp  MpPortAudioDriver.cpp  MpPortAudioMixer.cpp  MpPortAudioStream.cpp  MpPortAudioStreamBase.cpp  MpResamplerBase.cpp  MpResamplerSpeex.cpp  MpResource.cpp  MpRtpBuf.cpp  MpRtpInputAudioConnection.cpp  MpRtpOutputAudioConnection.cpp  MpRtpOutputConnection.cpp  MpStopDTMFTimerMsg.cpp  MpSyncPortAudioStream.cpp  MpTimerMsg.cpp  MpdGIPSiLBC.cpp  MpdGIPSiPCMA.cpp  (+64 more)
sipXmediaLib/src/rtcp/: ByeReport.cpp  RTCManager.cpp  RTCPTimer.cpp  SourceDescription.cpp
sipXportLib/include/: Makefile.am  SipXportLibInit.h
sipXportLib/include/os/: IStunSocket.h  OsBSem.h  OsDefs.h  OsIntPtrMsg.h  OsIntTypes.h  OsMsg.h  OsMsgDispatcher.h  OsMsgPool.h  OsMulticastSocket.h  OsMutexC.h  OsNameDbInit.h  OsNatAgentTask.h  OsNatConnectionSocket.h  OsNatDatagramSocket.h  OsNatSocketBaseImpl.h  OsNetwork.h  OsProcessMgr.h  OsProtectEvent.h  OsPtrLock.h  OsQueuedEvent.h  OsQueuedNotification.h  OsRWMutex.h  OsRWSyncBase.h  OsSSL.h  OsSSLServerSocket.h  OsSharedServerTask.h  OsSharedServerTaskMgr.h  OsSocket.h  OsStatus.h  OsStunResultSuccessMsg.h  OsSysLogTask.h  OsTimer.h  OsTimerNotification.h  OsTimerTask.h  TurnMessage.h  qsTypes.h
sipXportLib/include/utl/: PluginHooks.h  UtlHashBag.h  UtlHashMap.h  UtlIterator.h  UtlListIterator.h  UtlLongLongInt.h  UtlObservable.h  UtlObservableImpl.h  UtlRegex.h  UtlSortedList.h  UtlString.h  UtlTypedValue.h  XmlContent.h
sipXtackLib/include/: Makefile.am
sipXtackLib/include/net/: HttpBody.h  HttpMessage.h  HttpRequestContext.h  SdpBody.h  SdpCodecFactory.h  SdpHelper.h  SipCallIdGenerator.h  SipClient.h  SipContact.h  SipContactDb.h  SipContactSelector.h  SipDialog.h  SipInfoEventListener.h  SipInfoStatusEventListener.h  SipLine.h  SipLineAlias.h  SipLineList.h  SipLineMgr.h  SipLineProvider.h  SipLineStateEventListener.h  SipMessage.h  SipMessageEvent.h  SipMessageList.h  SipPimClient.h  SipProtocolServerBase.h  SipPublishContentMgr.h  SipRefreshManager.h  SipRefreshMgr.h  SipSecurityEventListener.h  SipSession.h  SipSrvLookup.h  SipSubscribeServer.h  SipSubscribeServerEventHandler.h  SipTcpServer.h  SipTlsServer.h  SipTransaction.h  SipTransport.h  SipUdpServer.h  SipUserAgent.h  SipUserAgentBase.h  (+4 more)
sipXtackLib/include/resparse/: bzero.h  res_info.h
sipXtackLib/include/test/: CompareHelper.h
trunk/sipXcallLib/include/: Makefile.am
trunk/sipXcallLib/src/: Makefile.am
trunk/sipXmediaLib/include/: Makefile.am
trunk/sipXportLib/src/: Makefile.am
(+3107 files in other folders)
