
# preserve header timestamps to preserve incremental builds across
# projects
nobase_includeHEADERS_INSTALL = $(INSTALL) -D -p -c -m 644

nobase_include_HEADERS =  \
    cp/msg/AcCommandMsg.h \
    cp/msg/AcNotificationMsg.h \
    cp/CallManager.h \
    cp/msg/CmCommandMsg.h \
    cp/msg/CmGainFocusMsg.h \
    cp/msg/CmNotificationMsg.h \
    cp/msg/CmYieldFocusMsg.h \
    cp/Connection.h \
    cp/CpAudioCodecInfo.h \
    cp/CpCall.h \
    cp/CpCallManager.h \
    cp/CpCallStateEventListener.h \
    cp/CpCodecInfo.h \
    cp/CpDefs.h \
    cp/CpGhostConnection.h \
    cp/CpIntMessage.h \
    cp/CpMediaEventListener.h \
    cp/CpMessageTypes.h \
    cp/CpMultiStringMessage.h \
    cp/CpNotificationMsgDef.h \
    cp/CpPeerCall.h \
    cp/CpVideoCodecInfo.h \
    cp/CSeqManager.h \
    cp/SipConnection.h \
    cp/msg/ScCommandMsg.h \
    cp/msg/ScNotificationMsg.h \
    cp/XCpAbstractCall.h \
    cp/XCpCall.h \
    cp/XCpCallManager.h \
    cp/XCpConference.h \
    cp/XSipConnection.h \
    ptapi/PtCall.h \
    ptapi/PtConnection.h \
    ptapi/PtDefs.h \
    ptapi/PtEvent.h \
    ptapi/PtSessionDesc.h \
    ptapi/PtTerminalConnection.h \
    tapi/CallStateEventMsg.h \
    tapi/InfoStatusEventMsg.h \
    tapi/KeepaliveEventMsg.h \
    tapi/LineStateEventMsg.h \
    tapi/MediaEventMsg.h \
    tapi/SecurityEventMsg.h \
    tapi/SecurityHelper.h \
    tapi/SipXAudio.h \
    tapi/SipXCall.h \
    tapi/SipXCallEventListener.h \
    tapi/SipXConference.h \
    tapi/SipXConfig.h \
    tapi/SipXCore.h \
    tapi/SipXEventDispatcher.h \
    tapi/SipXEvents.h \
    tapi/SipXHandleMap.h \
    tapi/SipXInfo.h \
    tapi/SipXInfoStatusEventListener.h \
    tapi/SipXKeepaliveEventListener.h \
    tapi/SipXLine.h \
    tapi/SipXLineEventListener.h \
    tapi/SipXMediaEventListener.h \
    tapi/SipXMessageObserver.h \
    tapi/SipXPim.h \
    tapi/SipXPublish.h \
    tapi/SipXSecurityEventListener.h \
    tapi/SipXSubscribe.h \
    tapi/sipXtapi.h \
    tapi/sipXtapiEvents.h \
    tapi/SipXTransport.h \
    tapi/SipXUtil.h

noinst_HEADERS = \
    test/mp/MpTestConfig.h \
    test/mp/MyPlayerListenerHistoryKeeper.h \
    test/mp/MyPlayerListenerPoller.h \
    test/mp/MyStreamQueueHistoryKeeper.h 

DISTCLEANFILES = Makefile.in
