
# preserve header timestamps to preserve incremental builds across
# projects
nobase_includeHEADERS_INSTALL = $(INSTALL) -D -p -c -m 644

nobase_include_HEADERS =  \
    cp/CSeqManager.h \
    cp/CallManager.h \
    cp/Connection.h \
    cp/CpAudioCodecInfo.h \
    cp/CpCall.h \
    cp/CpCallManager.h \
    cp/CpCallStateEventListener.h \
    cp/CpCodecInfo.h \
    cp/CpDefs.h \
    cp/CpGhostConnection.h \
    cp/CpIntMessage.h \
    cp/CpLoopDetector.h \
    cp/CpMediaEventListener.h \
    cp/CpMediaInterfaceProvider.h \
    cp/CpMessageQueueProvider.h \
    cp/CpMessageTypes.h \
    cp/CpMultiStringMessage.h \
    cp/CpNatTraversalConfig.h \
    cp/CpNotificationMsgDef.h \
    cp/CpPeerCall.h \
    cp/Cp100RelTracker.h \
    cp/CpSdpNegotiation.h \
    cp/CpSessionTimerProperties.h \
    cp/CpSipTransactionListener.h \
    cp/CpSipTransactionManager.h \
    cp/CpVideoCodecInfo.h \
    cp/SipConnection.h \
    cp/XCpAbstractCall.h \
    cp/XCpCall.h \
    cp/XCpCallConnectionListener.h \
    cp/XCpCallIdUtil.h \
    cp/XCpCallManager.h \
    cp/XCpCallStack.h \
    cp/XCpConference.h \
    cp/XSipConnection.h \
    cp/XSipConnectionContext.h \
    cp/XSipConnectionEventSink.h \
    cp/msg/AcAcceptConnectionMsg.h \
    cp/msg/AcAnswerConnectionMsg.h \
    cp/msg/AcAudioBufferPlayMsg.h \
    cp/msg/AcAudioFilePlayMsg.h \
    cp/msg/AcAudioPausePlaybackMsg.h \
    cp/msg/AcAudioRecordStartMsg.h \
    cp/msg/AcAudioRecordStopMsg.h \
    cp/msg/AcAudioResumePlaybackMsg.h \
    cp/msg/AcAudioStopPlaybackMsg.h \
    cp/msg/AcAudioToneStartMsg.h \
    cp/msg/AcAudioToneStopMsg.h \
    cp/msg/AcCommandMsg.h \
    cp/msg/AcDestroyConnectionMsg.h \
    cp/msg/AcConnectMsg.h \
    cp/msg/AcDropAllConnectionsMsg.h \
    cp/msg/AcDropConnectionMsg.h \
    cp/msg/AcGainFocusMsg.h \
    cp/msg/AcHoldAllConnectionsMsg.h \
    cp/msg/AcHoldConnectionMsg.h \
    cp/msg/AcLimitCodecPreferencesMsg.h \
    cp/msg/AcMuteInputConnectionMsg.h \
    cp/msg/AcNotificationMsg.h \
    cp/msg/AcRedirectConnectionMsg.h \
    cp/msg/AcRejectConnectionMsg.h \
    cp/msg/AcRenegotiateCodecsAllMsg.h \
    cp/msg/AcRenegotiateCodecsMsg.h \
    cp/msg/AcSendInfoMsg.h \
    cp/msg/AcTimerMsg.h \
    cp/msg/AcTransferBlindMsg.h \
    cp/msg/AcTransferConsultativeMsg.h \
    cp/msg/AcUnholdAllConnectionsMsg.h \
    cp/msg/AcUnholdConnectionMsg.h \
    cp/msg/AcUnmuteInputConnectionMsg.h \
    cp/msg/AcYieldFocusMsg.h \
    cp/msg/CmCommandMsg.h \
    cp/msg/CmDestroyAbstractCallMsg.h \
    cp/msg/CmGainFocusMsg.h \
    cp/msg/CmNotificationMsg.h \
    cp/msg/CmYieldFocusMsg.h \
    cp/msg/CpTimerMsg.h \
    cp/msg/Sc100RelTimerMsg.h \
    cp/msg/Sc2xxTimerMsg.h \
    cp/msg/ScByeRetryTimerMsg.h \
    cp/msg/ScCommandMsg.h \
    cp/msg/ScDelayedAnswerTimerMsg.h \
    cp/msg/ScDisconnectTimerMsg.h \
    cp/msg/ScInviteExpirationTimerMsg.h \
    cp/msg/ScNotificationMsg.h \
    cp/msg/ScReInviteTimerMsg.h \
    cp/msg/ScSessionTimeoutTimerMsg.h \
    cp/msg/ScTimerMsg.h \
    cp/state/AlertingSipConnectionState.h \
    cp/state/BaseSipConnectionState.h \
    cp/state/DialingSipConnectionState.h \
    cp/state/DisconnectedSipConnectionState.h \
    cp/state/EstablishedSipConnectionState.h \
    cp/state/GeneralTransitionMemory.h \
    cp/state/ISipConnectionState.h \
    cp/state/IdleSipConnectionState.h \
    cp/state/NewCallSipConnectionState.h \
    cp/state/OfferingSipConnectionState.h \
    cp/state/QueuedSipConnectionState.h \
    cp/state/RemoteAlertingSipConnectionState.h \
    cp/state/RemoteOfferingSipConnectionState.h \
    cp/state/RemoteQueuedSipConnectionState.h \
    cp/state/SipConnectionStateContext.h \
    cp/state/SipConnectionStateMachine.h \
    cp/state/SipConnectionStateObserver.h \
    cp/state/SipConnectionStateTransition.h \
    cp/state/SipEventTransitionMemory.h \
    cp/state/SipResponseTransitionMemory.h \
    cp/state/StateTransitionMemory.h \
    cp/state/StateTransitionEventDispatcher.h \
    cp/state/UnknownSipConnectionState.h \
    ptapi/PtCall.h \
    ptapi/PtConnection.h \
    ptapi/PtDefs.h \
    ptapi/PtEvent.h \
    ptapi/PtSessionDesc.h \
    ptapi/PtTerminalConnection.h \
    tapi/CallStateEventMsg.h \
    tapi/InfoEventMsg.h \
    tapi/InfoStatusEventMsg.h \
    tapi/KeepaliveEventMsg.h \
    tapi/LineStateEventMsg.h \
    tapi/MediaEventMsg.h \
    tapi/SecurityEventMsg.h \
    tapi/SecurityHelper.h \
    tapi/SipXAudio.h \
    tapi/SipXCall.h \
    tapi/SipXCallEventListener.h \
    tapi/SipXConference.h \
    tapi/SipXConfig.h \
    tapi/SipXCore.h \
    tapi/SipXEventDispatcher.h \
    tapi/SipXEvents.h \
    tapi/SipXHandleMap.h \
    tapi/SipXInfo.h \
    tapi/SipXInfoEventListener.h \
    tapi/SipXInfoStatusEventListener.h \
    tapi/SipXKeepaliveEventListener.h \
    tapi/SipXLine.h \
    tapi/SipXLineEventListener.h \
    tapi/SipXMediaEventListener.h \
    tapi/SipXMessageObserver.h \
    tapi/SipXPim.h \
    tapi/SipXPublish.h \
    tapi/SipXSecurityEventListener.h \
    tapi/SipXSubscribe.h \
    tapi/sipXtapi.h \
    tapi/sipXtapiEvents.h \
    tapi/SipXTransport.h \
    tapi/SipXUtil.h

noinst_HEADERS = \
    test/mp/MpTestConfig.h \
    test/mp/MyPlayerListenerHistoryKeeper.h \
    test/mp/MyPlayerListenerPoller.h \
    test/mp/MyStreamQueueHistoryKeeper.h 

DISTCLEANFILES = Makefile.in
