
# preserve header timestamps to preserve incremental builds across
# projects
nobase_includeHEADERS_INSTALL = $(INSTALL) -D -p -c -m 644

nobase_include_HEADERS = \
    os/HostAdapterAddress.h \
    os/IStunSocket.h \
    os/linux/host_address.h \
    os/linux/OsBSemLinux.h \
    os/linux/OsCSemLinux.h \
    os/linux/OsDateTimeLinux.h \
    os/linux/OsDirLinux.h \
    os/linux/OsFileInfoLinux.h \
    os/linux/OsFileIteratorLinux.h \
    os/linux/OsFileLinux.h \
    os/linux/OsLinuxDefs.h \
    os/linux/OsMutexLinux.h \
    os/linux/OsNetworkLinux.h \
    os/linux/OsPathLinux.h \
    os/linux/OsProcessIteratorLinux.h \
    os/linux/OsProcessLinux.h \
    os/linux/OsSharedLibMgrLinux.h \
    os/linux/OsTaskLinux.h \
    os/linux/OsUtilLinux.h \
    os/linux/pt_csem.h \
    os/linux/pt_mutex.h \
    os/NatMsg.h \
    os/OsAssert.h \
    os/OsBSem.h \
    os/OsCallback.h \
    os/OsConfigDb.h \
    os/OsConfigEncryption.h \
    os/OsConnectionSocket.h \
    os/OsContact.h \
    os/OsContactList.h \
    os/OsCSem.h \
    os/OsDatagramSocket.h \
    os/OsDateTime.h \
    os/OsDefs.h \
    os/OsDirBase.h \
    os/OsEncryption.h \
    os/OsEvent.h \
    os/OsEventMsg.h \
    os/OsExcept.h \
    os/OsFileBase.h \
    os/OsFileInfoBase.h \
    os/OsFileIteratorBase.h \
    os/OsFileSystem.h \
    os/OsFS.h \
    os/OsIntPtrMsg.h \
    os/OsIntTypes.h \
    os/OsLock.h \
    os/OsLockingList.h \
    os/OsMsg.h \
    os/OsMsgDispatcher.h \
    os/OsMsgPool.h \
    os/OsMsgQ.h \
    os/OsMulticastSocket.h \
    os/OsMutex.h \
    os/OsMutexC.h \
    os/OsNameDb.h \
    os/OsNameDbInit.h \
    os/OsNatAgentTask.h \
    os/OsNatDatagramSocket.h \
    os/OsNatKeepaliveListener.h \
    os/OsNatSocketBaseImpl.h \
    os/OsNetwork.h \
    os/OsNetworkAdapterInfo.h \
    os/OsNotification.h \
    os/OsPathBase.h \
    os/OsProcess.h \
    os/OsProcessIterator.h \
    os/OsProcessMgr.h \
    os/OsProtectEvent.h \
    os/OsProtectEventMgr.h \
    os/OsProtectEventMgrInit.h \
    os/OsPtrLock.h \
    os/OsPtrMsg.h \
    os/OsQueuedEvent.h \
    os/OsQueuedNotification.h \
    os/OsReadLock.h \
    os/OsRpcMsg.h \
    os/OsRWMutex.h \
    os/OsRWSyncBase.h \
    os/OsServerSocket.h \
    os/OsServerTask.h \
    os/OsSharedLibMgr.h \
    os/OsSharedServerTask.h \
    os/OsSharedServerTaskMgr.h \
    os/OsSharedServerTaskMsg.h \
    os/OsSharedServerTaskWorker.h \
    os/OsSharedTaskInfo.h \
    os/OsSocket.h \
    os/OsSSL.h \
    os/OsSSLConnectionSocket.h \
    os/OsSSLServerSocket.h \
    os/OsStatus.h \
    os/OsStunResultFailureMsg.h \
    os/OsStunResultMsg.h \
    os/OsStunResultSuccessMsg.h \
    os/OsSyncBase.h \
    os/OsSysLog.h \
    os/OsSysLogFacilities.h \
    os/OsSysLogMsg.h \
    os/OsSysLogTask.h \
    os/OsTask.h \
    os/OsTime.h \
    os/OsTimeLog.h \
    os/OsTimer.h \
    os/OsTimerMsg.h \
    os/OsTimerNotification.h \
    os/OsTimerTaskCommandMsg.h \
    os/OsTimerTask.h \
    os/OsTokenizer.h \
    os/OsUtil.h \
    os/OsWriteLock.h \
    os/qsTypes.h \
    os/shared/OsMsgQShared.h \
    os/shared/OsTimerMessage.h \
    os/StunMessage.h \
    os/StunUtils.h \
    os/TurnMessage.h \
    SipXportLibInit.h \
    utl/Plugin.h \
    utl/PluginHooks.h \
    utl/UtlBool.h \
    utl/UtlChainPool.h \
    utl/UtlContainable.h \
    utl/UtlContainableAtomic.h \
    utl/UtlContainer.h \
    utl/UtlCopyableContainable.h \
    utl/UtlCopyableSList.h \
    utl/UtlCopyableSortedList.h \
    utl/UtlCrc32.h \
    utl/UtlDateTime.h \
    utl/UtlDefs.h \
    utl/UtlDList.h \
    utl/UtlDListIterator.h \
    utl/UtlHashBag.h \
    utl/UtlHashBagIterator.h \
    utl/UtlHashMap.h \
    utl/UtlHashMapIterator.h \
    utl/UtlHistogram.h \
    utl/UtlInit.h \
    utl/UtlInt.h \
    utl/UtlIterator.h \
    utl/UtlLink.h \
    utl/UtlList.h \
    utl/UtlListIterator.h \
    utl/UtlLongLongInt.h \
    utl/UtlObservable.h \
    utl/UtlObservableImpl.h \
    utl/UtlPtr.h \
    utl/UtlRandom.h \
    utl/UtlRegex.h \
    utl/UtlRscStore.h \
    utl/UtlRscTrace.h \
    utl/UtlSList.h \
    utl/UtlSListIterator.h \
    utl/UtlSortedList.h \
    utl/UtlSortedListIterator.h \
    utl/UtlString.h \
    utl/UtlTokenizer.h \
    utl/UtlTypedValue.h \
    utl/UtlVoidPtr.h \
    utl/XmlContent.h \
    xmlparser/ExtractContent.h \
    xmlparser/tinystr.h \
    xmlparser/tinyxml.h \
    xmlparser/TiXmlIterator.h

EXTRA_DIST= \
    os/wnt/getWindowsDNSServers.h \
    os/wnt/OsBSemWnt.h \
    os/wnt/OsCSemWnt.h \
    os/wnt/OsDateTimeWnt.h \
    os/wnt/OsDirWnt.h \
    os/wnt/OsFileInfoWnt.h \
    os/wnt/OsFileIteratorWnt.h \
    os/wnt/OsFileSystemWnt.h \
    os/wnt/OsFileWnt.h \
    os/wnt/OsMutexWnt.h \
    os/wnt/OsPathWnt.h \
    os/wnt/OsProcessIteratorWnt.h \
    os/wnt/OsProcessWnt.h \
    os/wnt/OsSharedLibMgrWnt.h \
    os/wnt/OsTaskWnt.h \
    os/wnt/OsUtilWnt.h \
    os/wnt/WIndowsAdapterInfo.h 
