
# preserve header timestamps to preserve incremental builds across
# projects
nobase_includeHEADERS_INSTALL = $(INSTALL) -D -p -c -m 644

# Should the subdirectory names (mp/GIPS mp/iG729 mp/JB) be in this
# list, or is that just an unintended side effect of how this list
# was generated automatically? (HZM, 20040616)

nobase_include_HEADERS =  \
    mp/MpArrayBuf.h \
    mp/MpAsyncPortAudioStream.h \
    mp/MpAudioAbstract.h \
    mp/MpAudioBuf.h \
    mp/MpAudioDeviceInfo.h \
    mp/MpAudioDriverBase.h \
    mp/MpAudioDriverDefs.h \
    mp/MpAudioDriverFactory.h \
    mp/MpAudioDriverManager.h \
    mp/MpAudioFileDecompress.h \
    mp/MpAudioFileOpen.h \
    mp/MpAudioFileUtils.h \
    mp/MpAudioMixerBase.h \
    mp/MpAudioResource.h \
    mp/MpAudioStreamInfo.h \
    mp/MpAudioStreamParameters.h \
    mp/MpAudioUtils.h \
    mp/MpAudioWaveFileRead.h \
    mp/MpBridgeAlgBase.h \
    mp/MpBridgeAlgLinear.h \
    mp/MpBridgeAlgSimple.h \
    mp/MpBuf.h \
    mp/MpBufPool.h \
    mp/MpBufferMsg.h \
    mp/MpCallFlowGraph.h \
    mp/MpCodecFactory.h \
    mp/MpCodecInfo.h \
    mp/MpDataBuf.h \
    mp/MpDecodeBuffer.h \
    mp/MpDecoderBase.h \
    mp/MpDefs.h \
    mp/MpDspUtils.h \
    mp/MpDspUtilsConvertVect.h \
    mp/MpDspUtilsIntSqrt.h \
    mp/MpDspUtilsSerials.h \
    mp/MpDspUtilsShift.h \
    mp/MpDspUtilsSum.h \
    mp/MpDspUtilsSumVect.h \
    mp/MpEncoderBase.h \
    mp/MpFlowGraphBase.h \
    mp/MpFlowGraphMsg.h \
    mp/MpFromFileStartResourceMsg.h \
    mp/MpHostAudioApiInfo.h \
    mp/MpJitterBufferBase.h \
    mp/MpJitterBufferDefault.h \
    mp/MpJitterBufferSpeex.h \
    mp/MpMMTimer.h \
    mp/MpMMTimerWnt.h \
    mp/MpMediaTask.h \
    mp/MpMediaTaskHelper.h \
    mp/MpMediaTaskMsg.h \
    mp/MpMisc.h \
    mp/MpNoiseGeneratorBase.h \
    mp/MpNoiseGeneratorDefault.h \
    mp/MpNoiseGeneratorFactory.h \
    mp/MpNoiseGeneratorSpanDsp.h \
    mp/MpNotificationDispatcher.h \
    mp/MpNotificationMsgDef.h \
    mp/MpPortAudioDriver.h \
    mp/MpPortAudioMixer.h \
    mp/MpPortAudioStreamBase.h \
    mp/MpResNotification.h \
    mp/MpResource.h \
    mp/MpResourceMsg.h \
    mp/MpResourceSortAlg.h \
    mp/MpRtpBuf.h \
    mp/MpRtpInputAudioConnection.h \
    mp/MpRtpInputConnection.h \
    mp/MpRtpOutputAudioConnection.h \
    mp/MpRtpOutputConnection.h \
    mp/MpSipxDecoders.h \
    mp/MpStopDTMFTimerMsg \
    mp/MpSyncPortAudioStream.h \
    mp/MpTimerMsg.h \
    mp/MpToneResourceMsg.h \
    mp/MpTypes.h \
    mp/MpUdpBuf.h \
    mp/MpVolumeMeter.h \
    mp/MpVolumeMeterBase.h \
    mp/MpdIPPG7221.h \
    mp/MpdIPPG7231.h \
    mp/MpdIPPG728.h \
    mp/MpdIPPG729.h \
    mp/MpdIPPG7291.h \
    mp/MpdIPPG729i.h \
    mp/MpdIPPGAmr.h \
    mp/MpdIPPGAmrWb.h \
    mp/MpdIPPGSM.h \
    mp/MpdIPPPcma.h \
    mp/MpdIPPPcmu.h \
    mp/MpdPtAVT.h \
    mp/MpdSipxG722.h \
    mp/MpdSipxG726.h \
    mp/MpdSipxGSM.h \
    mp/MpdSipxILBC.h \
    mp/MpdSipxL16.h \
    mp/MpdSipxPcma.h \
    mp/MpdSipxPcmu.h \
    mp/MpdSipxSpeex.h \
    mp/MpdSipxSpeexUWb.h \
    mp/MpdSipxSpeexWb.h \
    mp/MpeIPPG7221.h \
    mp/MpeIPPG7231.h \
    mp/MpeIPPG728.h \
    mp/MpeIPPG729.h \
    mp/MpeIPPG7291.h \
    mp/MpeIPPG729i.h \
    mp/MpeIPPGAmr.h \
    mp/MpeIPPGAmrWb.h \
    mp/MpeIPPGSM.h \
    mp/MpeIPPPcma.h \
    mp/MpeIPPPcmu.h \
    mp/MpePtAVT.h \
    mp/MpeSipxG722.h \
    mp/MpeSipxG726.h \
    mp/MpeSipxGSM.h \
    mp/MpeSipxILBC.h \
    mp/MpeSipxL16.h \
    mp/MpeSipxPcma.h \
    mp/MpeSipxPcmu.h \
    mp/MpeSipxSpeex.h \
    mp/MpeSipxSpeexUWb.h \
    mp/MpeSipxSpeexWb.h \
    mp/MprBridge.h \
    mp/MprBridgeSetGainsMsg.h \
    mp/MprDecode.h \
    mp/MprSimpleDtmfDetector.h \
    mp/MprSpanDspDtmfDetector.h \
    mp/MprDejitter.h \
    mp/MprDtmfDetectorBase.h \
    mp/MprDtmfDetectorFactory.h \
    mp/MprEncode.h \
    mp/MpResamplerBase.h \
    mp/MpResamplerDefault.h \
    mp/MpResamplerFactory.h \
    mp/MpResamplerSpeex.h \
    mp/MprFromFile.h \
    mp/MprFromMic.h \
    mp/MprFromNet.h \
    mp/MprMixer.h \
    mp/MprNull.h \
    mp/MprRecorder.h \
    mp/MprRtpStartReceiveMsg.h \
    mp/MprRtpStartSendMsg.h \
    mp/MprSpeexEchoCancel.h \
    mp/MprSpeexPreProcess.h \
    mp/MprSplitter.h \
    mp/MprToNet.h \
    mp/MprToSpkr.h \
    mp/MprToneGen.h \
    mp/NetInTask.h \
    mp/dsplib.h \
    mp/dtmflib.h \
    mp/mpau.h \
    mp/resamplingby2.h \
    rtcp/BaseClass.h \
    rtcp/ByeReport.h \
    rtcp/IBaseClass.h \
    rtcp/IByeReport.h \
    rtcp/IGetByeInfo.h \
    rtcp/IGetReceiverStatistics.h \
    rtcp/IGetSenderStatistics.h \
    rtcp/IGetSrcDescription.h \
    rtcp/INetDispatch.h \
    rtcp/INetworkChannel.h \
    rtcp/INetworkRender.h \
    rtcp/INetworkSource.h \
    rtcp/IRTCPConnection.h \
    rtcp/IRTCPControl.h \
    rtcp/IRTCPHeader.h \
    rtcp/IRTCPNotify.h \
    rtcp/IRTCPRegister.h \
    rtcp/IRTCPRender.h \
    rtcp/IRTCPSession.h \
    rtcp/IRTCPStatistics.h \
    rtcp/IRTPDispatch.h \
    rtcp/IRTPHeader.h \
    rtcp/IReceiverReport.h \
    rtcp/ISDESReport.h \
    rtcp/ISenderReport.h \
    rtcp/ISetReceiverStatistics.h \
    rtcp/ISetSenderStatistics.h \
    rtcp/ISetSrcDescription.h \
    rtcp/Message.h \
    rtcp/MsgQueue.h \
    rtcp/NetworkChannel.h \
    rtcp/RTCManager.h \
    rtcp/RTCPConnection.h \
    rtcp/RTCPHeader.h \
    rtcp/RTCPRender.h \
    rtcp/RTCPSession.h \
    rtcp/RTCPSource.h \
    rtcp/RTCPTimer.h \
    rtcp/RTPHeader.h \
    rtcp/ReceiverReport.h \
    rtcp/RtcpConfig.h \
    rtcp/SenderReport.h \
    rtcp/SourceDescription.h \
    rtcp/TLink.h \
    rtcp/TLinkedList.h
